Added link to BOP leaderboard

--- a/publications.html
+++ b/publications.html
@@ -69,12 +69,15 @@
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
             <!-- &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p> -->
-          <p class="mb-1"><font color="#899499">Awards: An early version of this work won the ``Best method on TUD-L dataset'' award at the BOP Challenge 2023.</font></p>
+          <p class="mb-1"><font color="#899499">Awards: An early version of this work won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.</font></p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
             <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00947">
             <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+          </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://bop.felk.cvut.cz/leaderboards/pose-estimation-unseen-bop23/bop-classic-core/">
+            <i class="fa fa-trophy"></i>&nbsp;&nbsp;BOP leaderboard
           </a>
           <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/andreacaraffa/freeze">
             <i class="fa fa-github"></i>&nbsp;&nbsp;code
