Updated publications titles

--- a/publications.html
+++ b/publications.html
@@ -51,12 +51,10 @@
       <br><br>
 
 
-      <h2>Papers</h2>
-
       <!-- 2024 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h3>2024</h3>
+        <h2>2024 papers</h2>
 
         <!-- ECCV 2024 -->
         <li class="list-group-item list-group-item-action">
@@ -115,7 +113,7 @@
       <!-- 2023 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h3>2023</h3>
+        <h2>2023 papers</h2>
 
         <!-- BMVC 2023 -->
         <li class="list-group-item list-group-item-action">
@@ -246,7 +244,7 @@
       <!-- Until 2022 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h3>Until 2022</h3>
+        <h2>Papers until 2022</h2>
 
         <!-- ICPR-W 2020 -->
         <li class="list-group-item list-group-item-action">
