--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland.
           Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en">University of Verona</a>, Italy, in 2013,
           and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
-        <p class="fs-5">In my free time, I like <a href="https://www.goodreads.com/user/show/140273804-davide-boscaini">reading books</a> and
+        <p class="fs-5">In my free time, I like <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read">reading books</a> and
           <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
         <p class="fs-5">If you want to know more about me, you can have a look at my  <a href="data/cv.pdf">cv</a>
           or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/">LinkedIn page</a>.</p>
