--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Davide Boscaini</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
   </head>
 
   <body>
@@ -29,9 +30,9 @@
     </nav>
 
     <div class="container my-5">
-      <h1>Hi,</h1>
+      <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
-        <p class="fs-5">Welcome to my page!</p>
+        <!-- <p class="fs-5">Welcome to my page!</p> -->
         <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> in Trento, Italy.
           My research interests are in 3D perception and understanding,
@@ -42,8 +43,8 @@
           at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland.
           Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en">University of Verona</a>, Italy, in 2013,
           and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
-        <p class="fs-5">In my free time, I like <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read">reading books</a> and
-          <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
+        <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read">reading books</a> and
+          🎲 <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
         <p class="fs-5">If you want to know more about me, you can have a look at my  <a href="data/cv.pdf">cv</a>
           or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/">LinkedIn page</a>.</p>
 
