--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <!-- <p class="fs-5">Welcome to my page!</p> -->
         <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> in Trento, Italy.
-          My research interests are in 3D perception and understanding,
-          with a specific focus on object 6D pose estimation and 3D object/scene understanding.
-          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com">geometric deep learning</a>.</p>
+          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
+          <!-- with a specific focus on object 6D pose estimation and 3D object/scene understanding. -->
+          I have been a pioneer in <a href="https://geometricdeeplearning.com">Geometric deep learning</a>.</p>  <!-- the field of -->
         <p class="fs-5">Before joining FBK in 2017, I received a PhD in Computational Science
           under the supervision of <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
           at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland.
