--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
             <!-- &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p> -->
-          <p class="mb-1"><font color="#899499">Awards: An early version</a> of this work won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.</font></p>
+          <p class="mb-1"><font color="#899499">&#128170; An early version</a> of this work won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.</font></p>
             <!-- <a href="https://bop.felk.cvut.cz/method_info/386/"></a> -->
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
             <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
