--- a/publications.html
+++ b/publications.html
@@ -169,13 +169,13 @@
           <p class="mb-1"><font color="#899499">TL;DR: We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
             PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
           <a class="btn btn-outline-dark btn-sm"  style="margin-top:3px" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427">
-            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong>
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15692">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/davideboscaini/PatchMixer">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
+            <i class="fa fa-github"></i>&nbsp;&nbsp;code
           </a>
           <p></p>
         </li>
