Added icon for TL;DR

--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
             &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
-          <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation,
+          <p class="mb-1"><font color="#899499">&#8987; We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest,
             instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object.</font></p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/">
