Improved separation among publications

--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
       <!-- 2024 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>2024 papers</h2>
+        <h2>2024</h2>
 
         <!-- ECCV 2024 -->
         <li class="list-group-item list-group-item-action">
@@ -112,7 +112,7 @@
       <!-- 2023 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>2023 papers</h2>
+        <h2>2023</h2>
 
         <!-- BMVC 2023 -->
         <li class="list-group-item list-group-item-action">
@@ -243,7 +243,7 @@
       <!-- Until 2022 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>Papers until 2022</h2>
+        <h2>2013&ndash;2022</h2>
 
         <!-- ICPR-W 2020 -->
         <li class="list-group-item list-group-item-action">
