--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
     <div class="container my-5">
       <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
-        <!-- <p class="fs-5">Welcome to my page!</p> -->
+
         <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> in Trento, Italy.
           My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
           I have been a pioneer in the field of <a href="https://geometricdeeplearning.com">Geometric deep learning</a>.</p>
+
         <p class="fs-5">Before joining FBK in 2017, I received a PhD in Computational Science
           under the supervision of <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
           at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland.
           Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en">University of Verona</a>, Italy, in 2013,
           and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
+
         <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read">reading books</a> and
-          🎲 <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
-        <p class="fs-5">If you want to know more about me, you can have a look at my  <a href="data/cv.pdf">cv</a>
+          &#127922; <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
+
+        <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf">cv</a>
           or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/">LinkedIn page</a>.</p>
 
         <!-- Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p> -->
@@ -59,14 +62,10 @@
             <a href="https://tev.fbk.eu/home">Technologies of Vision Lab</a><br>
             Via Sommarive 18<br>
             38123 Povo, Trento, Italy<br>
-            Phone: (+39) 0461 314525<br> <!-- <abbr title="Phone">P:</abbr> -->
+            Phone: (+39) 0461 314525<br>
             Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
-            <!-- orig dim: width="960", height="136" -->
-            <!-- <span class="text-monospace"></span> -->
         </address>
 
-        <!-- <a href="https://getbootstrap.com" class="btn btn-primary">Read the Bootstrap docs</a> -->
-        <!-- <a href="https://github.com/twbs/examples" class="btn btn-secondary">View on GitHub</a> -->
       </div>
     </div>
 
