--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,6 @@
           </div>
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
-            <!-- &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p> -->
           <p class="mb-1"><font color="#899499">&#128170; An early version</a> of this work won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.</font></p>
             <!-- <a href="https://bop.felk.cvut.cz/method_info/386/"></a> -->
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
@@ -164,8 +163,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">TL;DR: We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
-            PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
+          <p class="mb-1"><font color="#899499">&#8987; We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
+            PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></p>
           <a class="btn btn-outline-dark btn-sm"  style="margin-top:3px" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
           </a>
@@ -228,7 +227,7 @@
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
           <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">TL;DR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
+          <p class="mb-1"><font color="#899499">&#8987; GeDi achieves state-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets.</font></p>
 
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2105.10382">
             <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
@@ -240,7 +239,7 @@
         </li>
       </ul>
 
-      <!-- Until 2022 -->
+      <!-- 2013-2022 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
         <h2>2013&ndash;2022</h2>
