--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
       <!-- 2024 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>2024</h2>
+        <h2 style="color:#899499">2024</h2>
 
         <!-- ECCV 2024 -->
         <li class="list-group-item list-group-item-action">
@@ -64,20 +64,22 @@
           </div>
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
-          <p class="mb-1"><font color="#899499">&#128170; An early version</a> of this work won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.</font></p>
-            <!-- <a href="https://bop.felk.cvut.cz/method_info/386/"></a> -->
+          <!-- <p class="mb-1" style="color:#899499">
+            &#128293; An enhanced version of this work, FreeZe-v2, achieved first place in the 6D localization task at the BOP Challenge 2024.
+          -->
+          <p class="mb-1" style="color:#899499">
+            &#128170; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
-            <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
+            <i class="fa fa-globe"></i> webpage
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00947">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://bop.felk.cvut.cz/leaderboards/pose-estimation-unseen-bop23/bop-classic-core/">
-            <i class="fa fa-trophy"></i>&nbsp;&nbsp;BOP leaderboard
+            <i class="fa fa-trophy"></i> BOP leaderboard
           </a>
-          <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/andreacaraffa/freeze">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
-          </a> -->
+          <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/andreacaraffa/freeze"><i class="fa fa-github"></i> code</a> -->
           <p></p>
         </li>
 
@@ -91,18 +93,25 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
-            &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
-          <p class="mb-1"><font color="#899499">&#8987; We introduce the new setting of open-vocabulary object 6D pose estimation,
+            &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font>
+          </p>
+          <p class="mb-1" style="color:#899499">
+            &#128293; An enhanced version of this work, Horyon, is now available as technical report at 
+            <a href="https://arxiv.org/abs/2406.16384" style="color:#899499">https://arxiv.org/abs/2406.16384</a>.
+          </p>
+          <p class="mb-1" style="color:#899499">
+            &#8987; We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest,
-            instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object.</font></p>
+            instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object.
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/">
-            <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
+            <i class="fa fa-globe"></i> webpage
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00690">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/oryon">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -111,7 +120,7 @@
       <!-- 2023 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>2023</h2>
+        <h2 style="color:#899499">2023</h2>
 
         <!-- BMVC 2023 -->
         <li class="list-group-item list-group-item-action">
@@ -124,10 +133,10 @@
           <p class="mb-1">Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2308.15353">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/mohamedtev/daca">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -142,13 +151,13 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023
-            &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font></p>
-          <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
+            &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15514">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/FCGF6D">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -163,16 +172,18 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">&#8987; We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
-            PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></p>
+          <p class="mb-1" style="color:#899499">
+            &#8987; We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
+            PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.
+          </p>
           <a class="btn btn-outline-dark btn-sm"  style="margin-top:3px" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427">
-            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i> pdf
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15692">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/davideboscaini/PatchMixer">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -189,10 +200,10 @@
           <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
           <!-- <p class="mb-1"><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub">
-            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i> pdf
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2212.03300">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <p></p>
         </li>
@@ -207,12 +218,13 @@
           </div>
           <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, André Moura, José Antunes, André Dias, Hugo Silva, Andreas Leonidou, Christos Constantinides, Christos Keleshis, Dante Abate, Fabio Poiesi</p>
           <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2023
-            &mdash; <font color="#a21a2a">Held in conjunction with CVPR 2023</font></p>
+            &mdash; <font color="#a21a2a">Held in conjunction with CVPR 2023</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2304.05417">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/fabiopoiesi/monet_dataset">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -227,13 +239,14 @@
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
           <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">&#8987; GeDi achieves state-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets.</font></p>
-
+          <p class="mb-1" style="color:#899499">
+            &#8987; GeDi achieves state-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets.
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2105.10382">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+            <i class="ai ai-arxiv ai-1x"></i> arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/fabiopoiesi/gedi">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+            <i class="fa fa-github"></i> code
           </a>
           <p></p>
         </li>
@@ -242,7 +255,7 @@
       <!-- 2013-2022 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
-        <h2>2013&ndash;2022</h2>
+        <h2 style="color:#899499">2013&ndash;2022</h2>
 
         <!-- ICPR-W 2020 -->
         <li class="list-group-item list-group-item-action">
