--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
         <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
           My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.</p>
+          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+        </p>
 
         <p class="fs-5">Before joining FBK in 2017, I received a PhD in Computational Science
           under the supervision of <a href="https://www.cs.ox.ac.uk/people/michael.bronstein" style="color:black">Michael Bronstein</a>
           at the <a href="https://www.usi.ch/en" style="color:black">Università della Svizzera italiana</a> in Lugano, Switzerland.
           Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en" style="color:black">University of Verona</a>, Italy, in 2013,
-          and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
+          and a Bachelor's degree in Applied Mathematics from the same institution in 2010.
+        </p>
 
         <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read" style="color:black">reading books</a> and
-          &#127922; <a href="https://boardgamegeek.com/user/Verig" style="color:black">playing boardgames</a>.</p>
+          &#127922; <a href="https://boardgamegeek.com/user/Verig" style="color:black">playing boardgames</a>.
+        </p>
 
         <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.</p>
-
-        <!-- Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p> -->
-        <!-- <i class="fa fa-file"></i> -->
-        <!-- <i class="fa fa-linkedin"></i> -->
+          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+        </p>
 
         <hr class="col-1 my-4">
 
