--- a/publications.html
+++ b/publications.html
@@ -64,9 +64,9 @@
           </div>
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
-          <!-- <p class="mb-1" style="color:#899499">
-            &#128293; An enhanced version of this work, FreeZe-v2, achieved first place in the 6D localization task at the BOP Challenge 2024.
-          -->
+          <p class="mb-1" style="color:#899499">
+            &#128293; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024.
+          </p>
           <p class="mb-1" style="color:#899499">
             &#128170; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.
           </p>
