--- a/publications.html
+++ b/publications.html
@@ -63,13 +63,15 @@
             <h5 class="mb-1">FreeZe: Training-free zero-shot 6D pose estimation with geometric and vision foundation models</h5>
           </div>
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
-          <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024
-            &mdash; <font color="#a21a2a">Also invited for presentation at the Recovering 6D Object Pose (R6D) workshop</font></p>
+          <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
           <p class="mb-1" style="color:#899499">
-            &#128293; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024.
+            &#128293; Invited for presentation at the Recovering 6D Object Pose (R6D) workshop.
           </p>
           <p class="mb-1" style="color:#899499">
-            &#128170; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.
+            &#129351; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024.
+          </p>
+          <p class="mb-1" style="color:#899499">
+            &#129351; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.
           </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
             <i class="fa fa-globe"></i> webpage
