--- a/publications.html
+++ b/publications.html
@@ -65,13 +65,13 @@
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
           <p class="mb-1" style="color:#899499">
-            &#128293; Invited for presentation at the Recovering 6D Object Pose (R6D) workshop.
+            &#128293; Invited for presentation at the 9th Recovering 6D Object Pose (R6D) workshop, held in conjuction with ECCV 2024
           </p>
           <p class="mb-1" style="color:#899499">
-            &#129351; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024.
+            &#129351; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024
           </p>
           <p class="mb-1" style="color:#899499">
-            &#129351; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023.
+            &#129351; An early version of this work, PoZe, won the "Best method on TUD-L dataset" award at the BOP Challenge 2023
           </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
             <i class="fa fa-globe"></i> webpage
@@ -100,12 +100,12 @@
           </p>
           <p class="mb-1" style="color:#899499">
             &#128293; An enhanced version of this work, Horyon, is now available as technical report at 
-            <a href="https://arxiv.org/abs/2406.16384" style="color:#899499">https://arxiv.org/abs/2406.16384</a>.
+            <a href="https://arxiv.org/abs/2406.16384" style="color:#899499">https://arxiv.org/abs/2406.16384</a>
           </p>
           <p class="mb-1" style="color:#899499">
             &#8987; We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest,
-            instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object.
+            instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object
           </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/">
             <i class="fa fa-globe"></i> webpage
