--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">About</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="about.html">About</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="publications.html">Publications</a>
             </li>
@@ -33,8 +33,9 @@
     </nav>
 
     <div class="container my-5">
-      <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
+
+        <h3>About</h3>
 
         <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
@@ -49,18 +50,15 @@
           and a Bachelor's degree in Applied Mathematics from the same institution in 2010.
         </p>
 
-        <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read" style="color:black">reading books</a> and
-          &#127922; <a href="https://boardgamegeek.com/user/Verig" style="color:black">playing boardgames</a>.
-        </p>
-
         <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
           or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
         </p>
 
         <hr class="col-1 my-4">
 
-        <h3>News</h3>
-        &#128293; One paper accepted at WACV 2025!
+        <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read" style="color:black">reading books</a> and
+          &#127922; <a href="https://boardgamegeek.com/user/Verig" style="color:black">playing boardgames</a>.
+        </p>
 
         <hr class="col-1 my-4">
 
