Added News section

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">About</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="publications.html">Publications</a>
             </li>
@@ -36,43 +36,28 @@
       <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
 
-        <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+        <p class="fs-5">
+          I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
           My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
           I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
         </p>
 
-        <p class="fs-5">Before joining FBK in 2017, I received a PhD in Computational Science
-          under the supervision of <a href="https://www.cs.ox.ac.uk/people/michael.bronstein" style="color:black">Michael Bronstein</a>
-          at the <a href="https://www.usi.ch/en" style="color:black">Università della Svizzera italiana</a> in Lugano, Switzerland.
-          Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en" style="color:black">University of Verona</a>, Italy, in 2013,
-          and a Bachelor's degree in Applied Mathematics from the same institution in 2010.
-        </p>
-
-        <p class="fs-5">In my free time, I like &#128214; <a href="https://www.goodreads.com/review/list/140273804-davide-boscaini?shelf=read" style="color:black">reading books</a> and
-          &#127922; <a href="https://boardgamegeek.com/user/Verig" style="color:black">playing boardgames</a>.
-        </p>
-
-        <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
+        <p class="fs-5">
+          If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
           or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
         </p>
 
         <hr class="col-1 my-4">
 
         <h3>News</h3>
-        &#128293; One paper accepted at WACV 2025!
+        <p class="fs-5">
+          &#128293; One paper accepted at WACV 2025!
+        </p>
 
-        <hr class="col-1 my-4">
-
-        <h3>Contacts</h3>
-        <address>
-            <a href="https://www.fbk.eu/en" style="color:black"><strong>Bruno Kessler Foundation</strong></a><br>
-            <a href="https://tev.fbk.eu/home" style="color:black">Technologies of Vision Lab</a><br>
-            Via Sommarive 18<br>
-            38123 Povo, Trento, Italy<br>
-            Phone: (+39) 0461 314525<br>
-            Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
-        </address>
+        <p class="fs-5">
+          &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024
+        </p>
 
       </div>
     </div>
