--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="publications.html">Publications</a>
             </li>
@@ -63,6 +63,19 @@
         <p class="fs-5">
           &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
         </p>
+
+
+        <hr class="col-1 my-4">
+
+        <h3>Contacts</h3>
+        <address>
+            <a href="https://www.fbk.eu/en" style="color:black"><strong>Bruno Kessler Foundation</strong></a><br>
+            <a href="https://tev.fbk.eu/home" style="color:black">Technologies of Vision Lab</a><br>
+            Via Sommarive 18<br>
+            38123 Povo, Trento, Italy<br>
+            Phone: (+39) 0461 314525<br>
+            Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
+        </address>
 
       </div>
     </div>
