--- a/publications.html
+++ b/publications.html
@@ -22,9 +22,9 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link active" href="publications.html">Publications</a>
             </li>
