Added WACV25 paper

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
         <h3>News</h3>
         <p class="fs-5">
-          &#128293; On November 22nd, I will give a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
+          &#128227; On November 22nd, I will give a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
           Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
         </p>
 
         <p class="fs-5">
-          &#128170; One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training.
+          &#128170; (Nov. 2024) One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training.
         </p>
 
         <p class="fs-5">
-          &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
+          &#129351; (Oct. 2024) FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
         </p>
 
 
