--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,33 @@
       <br><br>
 
 
+      <!-- 2025 -->
+      <hr class="col col-lg-2">
+      <ul class="list-group list-group-flush">
+        <h2 style="color:#899499">2025</h2>
+
+          <!-- WACV 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <figure class="figure">
+              <img src="data/thumb/2025_WACV_COPS.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure>
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">3D Part Segmentation via Geometric Aggregation of 2D Visual Features</h5>
+            </div>
+            <p class="mb-1">Marco Garosi, Riccardo Tedoldi, <strong>Davide Boscaini</strong>, Massimiliano Mancini, Nicu Sebe, Fabio Poiesi</p>
+            <p class="mb-1"><i>Winter Conference on Applications of Computer Vision (WACV)</i>, 2025</p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://3d-cops.github.io/">
+              <i class="fa fa-globe"></i> webpage
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <p></p>
+          </li>
+
+      </ul>
+
+
       <!-- 2024 -->
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
@@ -68,7 +95,7 @@
           <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
           <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
           <p class="mb-1" style="color:#899499">
-            &#128293; Invited for presentation at the 9th Recovering 6D Object Pose (R6D) workshop, held in conjuction with ECCV 2024
+            &#128227; Invited for presentation at the 9th Recovering 6D Object Pose (R6D) workshop, held in conjuction with ECCV 2024
           </p>
           <p class="mb-1" style="color:#899499">
             &#129351; An enhanced version of this work, FreeZe-v2, achieved 1st place in both 6D localization and 6D detection at the BOP Challenge 2024
