--- a/index.html
+++ b/index.html
@@ -36,17 +36,24 @@
       <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
 
-        <p class="fs-5">
-          I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
-          of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
-        </p>
+        <div class='row'>
+          <div class='col'>
+            <p class="fs-5">
+              I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+              of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
+              My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
+              I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+            </p>
+            <p class="fs-5">
+              If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
+              or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+            </p>
+          </div>
+          <div class='col'>
+            <img src="./data/MN_FBK_Davide-07228.jpg" class="img-fluid" alt="Portrait by Mattia Nardon on December 4th, 2024">
+          </div>
+        </div>
 
-        <p class="fs-5">
-          If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
-        </p>
 
         <hr class="col-1 my-4">
 
@@ -63,7 +70,6 @@
         <p class="fs-5">
           &#129351; (Oct. 2024) FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
         </p>
-
 
         <hr class="col-1 my-4">
 
