--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col-lg-8 px-0">
 
         <div class='row'>
-          <div class='col'>
+          <div class='col-8'>
             <p class="fs-5">
               I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
               of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
@@ -49,8 +49,8 @@
               or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
             </p>
           </div>
-          <div class='col'>
-            <img src="./data/MN_FBK_Davide-07228.jpg" class="img-fluid" alt="Portrait by Mattia Nardon on December 4th, 2024">
+          <div class='col-4'>
+            <img src="./data/portrait_241204_square.png" class="img-fluid" alt="Portrait by Mattia Nardon on December 4th, 2024">
           </div>
         </div>
 
