--- a/index.html
+++ b/index.html
@@ -33,11 +33,29 @@
     </nav>
 
     <div class="container my-5">
-      <h1>Hi! &#128075;</h1>
       <div class="col-lg-8 px-0">
 
-        <div class='row'>
-          <div class='col-8'>
+        <!-- Mobile -->
+        <div class="d-md-none row">
+          <h1>Hi! &#128075;</h1>
+          <img class="img-fluid w-100" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
+          <p></p>
+          <p class="fs-5">
+            I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+            of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
+            My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
+            I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+          </p>
+          <p class="fs-5">
+            If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
+            or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+          </p>
+        </div>
+
+        <!-- Desktop -->
+        <div class="d-none d-lg-block row">
+          <div class="col-8">
+            <h1>Hi! &#128075;</h1>
             <p class="fs-5">
               I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
               of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
@@ -49,8 +67,8 @@
               or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
             </p>
           </div>
-          <div class='col-4'>
-            <img src="./data/portrait_241204_square.png" class="img-fluid" alt="Portrait by Mattia Nardon on December 4th, 2024">
+          <div class="col-4">
+            <img class="img-fluid" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
           </div>
         </div>
 
