--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="col-lg-8 px-0">
 
         <!-- Mobile -->
-        <div class="d-md-none" style="margin-top:-20pt">
+        <div class="d-md-none" style="margin-top:-25pt">
           <h1>Hi! &#128075;</h1>
           <img class="img-fluid w-100" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
           <p></p>
@@ -53,7 +53,7 @@
         </div>
 
         <!-- Desktop -->
-        <div class="d-none d-lg-block row">
+        <div class="d-none d-lg-block">
           <div class="col-8">
             <h1>Hi! &#128075;</h1>
             <p class="fs-5">
