--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </p>
 
         <p class="fs-5">
-          &#128170; (Nov. 2024) One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training.
+          &#127881; (Nov. 2024) One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training. Check out the <a href="https://3d-cops.github.io/" style="color:black">project page</a>.
         </p>
 
         <p class="fs-5">
