--- a/publications.html
+++ b/publications.html
@@ -70,9 +70,9 @@
             <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://3d-cops.github.io/">
               <i class="fa fa-globe"></i> webpage
             </a>
-            <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/">
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2412.04247">
               <i class="ai ai-arxiv ai-1x"></i> arxiv
-            </a> -->
+            </a>
             <p></p>
           </li>
 
