--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
               <img src="data/thumb/2025_WACV_COPS.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
             </figure>
             <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-              <h5 class="mb-1">3D Part Segmentation via Geometric Aggregation of 2D Visual Features</h5>
+              <h5 class="mb-1">3D part segmentation via geometric aggregation of 2D visual features</h5>
             </div>
             <p class="mb-1">Marco Garosi, Riccardo Tedoldi, <strong>Davide Boscaini</strong>, Massimiliano Mancini, Nicu Sebe, Fabio Poiesi</p>
             <p class="mb-1"><i>Winter Conference on Applications of Computer Vision (WACV)</i>, 2025</p>
