--- a/index.html
+++ b/index.html
@@ -90,7 +90,54 @@
         <hr class="col-1 my-4">
 
         <h3>News</h3>
-        <p class="fs-5">
+
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <p class="fs-5">
+                  Nov. 22, 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128227; I gave a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
+                  Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <p class="fs-5">
+                  Nov. 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training.
+                  Check out the <a href="https://3d-cops.github.io/" style="color:black">project page</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <p class="fs-5">
+                  Oct. 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
+                </p>
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
+
+        <!-- <p class="fs-5">
           &#128227; On November 22nd, I will give a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
           Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
         </p>
@@ -101,9 +148,7 @@
 
         <p class="fs-5">
           &#129351; (Oct. 2024) FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
-        </p>
-
-
+        </p> -->
 
         <hr class="col-1 my-4">
 
