--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 
         <table class="table">
           <tbody>
+
+            <tr>
+              <td>
+                <p class="fs-5">
+                  Dec. 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129351; FreeZeV2.1 is the "overall best method" of both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
+                </p>
+              </td>
+            </tr>
+
             <tr>
               <td>
                 <p class="fs-5">
@@ -129,7 +143,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
+                  &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
                 </p>
               </td>
             </tr>
